fix formatting issues

--- a/mvmt19/rosters/11-girls.html
+++ b/mvmt19/rosters/11-girls.html
@@ -60,7 +60,7 @@
     Valentina Bedoya<br>
     Saddie Swafford<br>
     Keely Mowris<br>
-    Callie Swafford	<i>Allergies: gluten, peanuts, almonds, red and purple food dyes</i><br>
+    Callie Swafford	<mark>Allergies: gluten, peanuts, almonds, red and purple food dyes</mark><br>
     N'deye Akinleye<br>
   </p>
 
@@ -75,7 +75,7 @@
   </p>
 
   <p><b>Needs a Leader</b><br>
-    Jadyn McCrane<br>
+    <mark>Jadyn McCrane</mark><br>
   </p>
 
 </body>
