--- a/mvmt19/rosters/12-boys.html
+++ b/mvmt19/rosters/12-boys.html
@@ -46,7 +46,7 @@
     Bailey Walker<br>
     Connor Mitchell <i>backpack</i><br>
     Matt Austin<br>
-    Brandon Jordan <i>Milk/Dairy allergy</i><br>
+    Brandon Jordan <mark>Milk/dairy allergy</mark><br>
   </p>
   
 </body>
