--- a/mvmt19/rosters/12-girls.html
+++ b/mvmt19/rosters/12-girls.html
@@ -27,15 +27,15 @@
   <h1>12th Grade Girls</h1>
 
   <p><b>Beth Braden / Symira McKenzie Milton</b><br>
-    Kelsey Potter
-    Rachel Beaumont
+    Kelsey Potter<br>
+    Rachel Beaumont<br>
   </p>
 
   <p><b>Cindy Montoya</b><br>
     Megan Smith <i>backpack</i><br>
     Brittany Huckaby<br>
     Hannah Dew<br>
-    Madison Asbury <i>learning impairments, Brittany is a great buddy / helper</i><br>
+    Madison Asbury <mark>Has learning impairments - Brittany Huckaby is a great buddy / helper</mark><br>
   </p>
 
   <p><b>Lisa Cole</b><br>
@@ -67,8 +67,8 @@
   </p>
 
   <p><b>Needs a Leader</b><br>
-    Macey McDonald<br>
-    Shakiah Johnson<br> 
+    <mark>Macey McDonald</mark><br>
+    <mark>Shakiah Johnson</mark><br> 
   </p>
 
 </body>
