--- a/mvmt19/rosters/6-boys.html
+++ b/mvmt19/rosters/6-boys.html
@@ -50,7 +50,7 @@
     AJ Berrio <i>backpack</i><br>
     Caleb Dice<br>
     Brayden Powell<br>
-    Grayson Anderson<br>
+    Grayson Anderson <mark>Morning ADHD meds</mark><br>
     Diego Wallace<br>
     Colin Suddeth<br>
     Ethan Kerwin<br>
@@ -61,11 +61,11 @@
     Luke Bates<br>
     Jaxsen Kanipes<br>
     Leland Hulsey<br>
-    Ethan Eubanks	<i>has asthma</i><br>
+    Ethan Eubanks	<mark>Asthma</mark><br>
   </p>
 
   <p><b>Needs A Leader</b><br>
-    R'Tayvion Jones<br>
+    <mark>R'Tayvion Jones</mark><br>
   </p>
 
 </body>
