--- a/mvmt19/rosters/7-boys.html
+++ b/mvmt19/rosters/7-boys.html
@@ -27,7 +27,7 @@
   <h1>7th Grade Boys</h1>
 
   <p><b>Jayden Emison</b><br>
-    Nathaniel Loy	<i>Peanut, tree nut, coconut allergies</i><br>
+    Nathaniel Loy	<mark>Peanut, tree nut, coconut allergies</mark><br>
     Elijah Maughon <i>backpack</i><br>
     Will Tucker <i>backpack</i><br>
     Hampton Chrimes<br>
@@ -37,9 +37,9 @@
     Caleb Sweet<br>
     Noah Vlahakis<br>
     Jackson Smith <i>backpack</i><br>
-    Landon Smith <i>HGH shots at night, meds in morning</i><br>
+    Landon Smith <mark>HGH shots at night, meds in morning</mark><br>
     Ben Dallas <i>backpack</i><br>
-    Nathan A Deuble	<i>Gluten Free, Dairy Free, Soy Free</i><br>
+    Nathan A Deuble	<mark>Gluten Free, Dairy Free, Soy Free</mark><br>
     Matthew Merli<br>
   </p>
 
@@ -47,14 +47,14 @@
     Case Whitaker <i>backpack</i><br>
     Jaxson Denton<br>
     Lawrence Tate<br>
-    Cale Howe <i>Nightly meds for ADHD</i><br>
+    Cale Howe <mark>Nightly meds for ADHD</mark><br>
     Nicholas Goodgame <i>backpack</i><br>
     Bennett Greene<br>
     Grant Wells<br>
   </p>
 
   <p><b>Needs Leader</b><br>
-    Sharles II Johnson<br>
+    <mark>Sharles II Johnson</mark><br>
   </p>
 
 </body>
