--- a/mvmt19/rosters/7-girls.html
+++ b/mvmt19/rosters/7-girls.html
@@ -27,7 +27,7 @@
   <h1>7th Grade Girls</h1>
 
   <p><b>Cindy Montoya</b><br>
-    Annabelle Lesch	<i>Tree nut allergy, backpack</i><br>
+    Annabelle Lesch	<mark>Tree nut allergy</mark> <i>backpack</i><br>
     Molly Glenn<br>
     Emma Martin <i>backpack</i><br>
     Kamryn Anderson <i>backpack</i><br>
@@ -53,7 +53,7 @@
     Grace Flores<br>
     Campbell Patterson<br>
     Riley Allred<br>
-    Nyla Jordan <i>type 1 Diabetic</i><br>
+    Nyla Jordan <mark>Type 1 Diabetic</mark><br>
   </p>
   
   <p><b>Lucy Northern / Angela Mattioli</b><br>
