--- a/mvmt19/rosters/8-boys.html
+++ b/mvmt19/rosters/8-boys.html
@@ -51,9 +51,9 @@
     Jacob Reinbolt<br>
     Reilly Dishner<br>
     Maverick Henderson<br>
-    Dillon Clark <i>ADHD meds</i><br>
+    Dillon Clark <mark>ADHD meds</mark><br>
     Brock Metts<br>
-    Griffin Cox <i>ADHD, not medicated per physician</i><br>
+    Griffin Cox <mark>ADHD, not medicated per physician</mark><br>
   </p>
 
   <p><b>Chad Helland / Dave Gannon</b><br>
