--- a/mvmt19/rosters/8-girls.html
+++ b/mvmt19/rosters/8-girls.html
@@ -56,7 +56,7 @@
   </p>
 
   <p><b>Jessie Owens</b><br>
-    Isabella Reeves	<i>Nightly meds for adhd</i><br>
+    Isabella Reeves	<mark>Nightly meds for adhd</mark><br>
     Emma Cooke<br>
     Marnasia England<br>
     Te'shauria Akinleye<br>
@@ -72,7 +72,7 @@
   </p>
 
   <p><b>Needs Leader</b><br>
-    Shentasia Johnson<br>
+    <mark>Shentasia Johnson</mark><br>
   </p>
 </body>
 
