--- a/mvmt19/rosters/9-boys.html
+++ b/mvmt19/rosters/9-boys.html
@@ -31,7 +31,7 @@
     Conner Frost<br>
     Josiah Swafford<br>
     Cole Jordan<br>
-    CJ Saffell <i>Asthma</i><br>
+    CJ Saffell <mark>Asthma</mark><br>
   </p>
 
   <p><b>John Pipkin</b><br>
@@ -50,7 +50,7 @@
   </p>
 
   <p><b>Needs a Leader</b><br>
-    Eli Parks<br>
+    <mark>Eli Parks</mark><br>
   </p>
   
 </body>
