--- a/mvmt19/rosters/9-girls.html
+++ b/mvmt19/rosters/9-girls.html
@@ -34,7 +34,7 @@
     Gillian McAnally<br>
     Alyssa Cooney<br>
     Avery Laugherty<br>
-    Emily Shaver <i>Meds twice daily, must be confirmed by adult.</i><br>
+    Emily Shaver <mark>Meds twice daily, must be confirmed by adult</mark><br>
     Gracie Burgess<br>
   </p>
 
@@ -50,7 +50,7 @@
   <p><b>Breanne Vlahakis / Heather Martin</b><br>
     Cadence Kerns<br>
     Amber Williams<br>
-    Andi Grace Gibson <i>Potential food texture issues</i><br>
+    Andi Grace Gibson <mark>Potential food texture issues</mark><br>
     Zayda Dominick<br>
   </p>
   
@@ -71,7 +71,7 @@
   </p>
 
   <p><b>Needs a Leader</b><br>
-    Mattu Gideon<br>
+    <mark>Mattu Gideon</mark><br>
   </p>
 
 </body>
