fix formatting issues

--- a/mvmt19/rosters/6-girls.html
+++ b/mvmt19/rosters/6-girls.html
@@ -72,10 +72,10 @@
   </p>
 
   <p><b>Needs A Leader</b><br>
-    Braelyn Hardin<br>
+    <mark>Braelyn Hardin<br>
     Maleah Shelton<br>
     Abby Stone<br>
-    Nevaeh Reynolds<br>
+    Nevaeh Reynolds</mark><br>
   </p>
 
 </body>
