reorder some groups

--- a/mvmt19/rosters/6-boys.html
+++ b/mvmt19/rosters/6-boys.html
@@ -37,6 +37,13 @@
     Wyatt Lawson<br>
   </p>
 
+  <p><b>John Choate</b><br>
+    Luke Bates<br>
+    Jaxsen Kanipes<br>
+    Leland Hulsey<br>
+    Ethan Eubanks	<mark>Asthma</mark><br>
+  </p>
+
   <p><b>Keegan McClain</b><br>
     Braden Nitzsche<br>
     Caden Cheverton <i>backpack</i><br>
@@ -45,7 +52,7 @@
     Alex Hernandez<br>
   </p>
 
-  <p><b>Zach Znachko / Alex Hart</b><br>
+  <p><b>Zach Znachko &amp; Alex Hart</b><br>
     Jessy Muffett<br>
     AJ Berrio <i>backpack</i><br>
     Caleb Dice<br>
@@ -55,13 +62,6 @@
     Colin Suddeth<br>
     Ethan Kerwin<br>
     Greyson Tilley<br>
-  </p>
-
-  <p><b>John Choate</b><br>
-    Luke Bates<br>
-    Jaxsen Kanipes<br>
-    Leland Hulsey<br>
-    Ethan Eubanks	<mark>Asthma</mark><br>
   </p>
 
   <p><b>Needs A Leader</b><br>
