--- a/mvmt19/rosters/6-girls.html
+++ b/mvmt19/rosters/6-girls.html
@@ -41,7 +41,16 @@
     Madison Haynes<br>
   </p>
 
-  <p><b>Marta Crass / Emma Madison</b><br>
+  <p><b>Lindsey Johnson</b><br>
+    Lauren Lanning <i>backpack</i><br>
+    Riley Kate Martin<br>
+    Ryan Davenport<br>
+    Kayla Ray<br>
+    Sydney Haun<br>
+    Keira Allen<br>
+  </p>
+
+  <p><b>Marta Crass &amp; Emma Madison</b><br>
     Grace Baaklini <i>backpack</i><br>
     Autumn Godfrey<br>
     Alyssia Hernandez<br>
@@ -62,16 +71,8 @@
     Ella Akin<br>
   </p>
 
-  <p><b>Lindsey Johnson</b><br>
-    Lauren Lanning <i>backpack</i><br>
-    Riley Kate Martin<br>
-    Ryan Davenport<br>
-    Kayla Ray<br>
-    Sydney Haun<br>
-    Keira Allen<br>
-  </p>
 
-  <p><b>Needs A Leader</b><br>
+  <p><b>Needs a Leader</b><br>
     <mark>Braelyn Hardin<br>
     Maleah Shelton<br>
     Abby Stone<br>
