--- a/mvmt19/rosters/7-boys.html
+++ b/mvmt19/rosters/7-boys.html
@@ -33,17 +33,7 @@
     Hampton Chrimes<br>
   </p>
 
-  <p><b>Jordan Martin / Zach Rutland</b><br>
-    Caleb Sweet<br>
-    Noah Vlahakis<br>
-    Jackson Smith <i>backpack</i><br>
-    Landon Smith <mark>HGH shots at night, meds in morning</mark><br>
-    Ben Dallas <i>backpack</i><br>
-    Nathan A Deuble	<mark>Gluten Free, Dairy Free, Soy Free</mark><br>
-    Matthew Merli<br>
-  </p>
-
-  <p><b>Marc Courts / Talon Hill</b><br>
+  <p><b>Marc Courts &amp; Talon Hill</b><br>
     Case Whitaker <i>backpack</i><br>
     Jaxson Denton<br>
     Lawrence Tate<br>
@@ -51,6 +41,16 @@
     Nicholas Goodgame <i>backpack</i><br>
     Bennett Greene<br>
     Grant Wells<br>
+  </p>
+
+  <p><b>Zach Rutland &amp; Richard Emison</b><br>
+    Caleb Sweet<br>
+    Noah Vlahakis<br>
+    Jackson Smith <i>backpack</i><br>
+    Landon Smith <mark>HGH shots at night, meds in morning</mark><br>
+    Ben Dallas <i>backpack</i><br>
+    Nathan A Deuble	<mark>Gluten Free, Dairy Free, Soy Free</mark><br>
+    Matthew Merli<br>
   </p>
 
   <p><b>Needs Leader</b><br>
