--- a/mvmt19/rosters/7-girls.html
+++ b/mvmt19/rosters/7-girls.html
@@ -26,6 +26,12 @@
 
   <h1>7th Grade Girls</h1>
 
+  <p><b>Angela Mattioli &amp; Lucy Northern</b><br>
+    Alyssa Lechleitner<br>
+    Haley Elizabeth Yager<br>
+    Jaide Robinson<br>
+  </p>
+
   <p><b>Cindy Montoya</b><br>
     Annabelle Lesch	<mark>Tree nut allergy</mark> <i>backpack</i><br>
     Molly Glenn<br>
@@ -34,7 +40,7 @@
     Madison Perrin<br>
   </p>
 
-  <p><b>Didi Reeves / Caroline Owens / Jaide Belk</b><br>
+  <p><b>Didi Reeves, Caroline Owens, Jaide Belk</b><br>
     Brookelynne Hamilton<br>
     Caroline Logan <i>backpack</i><br>
     Chloe Surlas <i>backpack</i><br>
@@ -56,11 +62,7 @@
     Nyla Jordan <mark>Type 1 Diabetic</mark><br>
   </p>
   
-  <p><b>Lucy Northern / Angela Mattioli</b><br>
-    Alyssa Lechleitner<br>
-    Haley Elizabeth Yager<br>
-    Jaide Robinson<br>
-  </p>
+
 
 </body>
 
