--- a/mvmt19/rosters/8-boys.html
+++ b/mvmt19/rosters/8-boys.html
@@ -26,15 +26,13 @@
 
   <h1>8th Grade Boys</h1>
 
-  <p><b>Jasper Emerson</b><br>
-    Brycen Hamilton<br>
-    Austin Wirtz <i>backpack</i><br>
-    Riley Anderson<br>
-    Ethan Crandall<br>
-    Coban White<br>
+  <p><b>Chad Helland &amp; Dave Gannon</b><br>
+    Bailey Wilson<br>
+    Seth Perkins<br>
+    Andrew Fritts<br>
   </p>
 
-  <p><b>Tyler Owens / Gary Carter</b><br>
+  <p><b>Gary Carter &amp; Tyler Owens</b><br>
     Caleb Sweet <i>backpack</i><br>
     Landon Daley <i>backpack</i><br>
     Hunter Brown <i>backpack</i><br>
@@ -45,7 +43,15 @@
     Gavin Paquette<br>    
   </p>
 
-  <p><b>Tyler Shaffer / Tanner Gaspard</b><br>
+  <p><b>Jasper Emerson</b><br>
+    Brycen Hamilton<br>
+    Austin Wirtz <i>backpack</i><br>
+    Riley Anderson<br>
+    Ethan Crandall<br>
+    Coban White<br>
+  </p>
+
+  <p><b>Tyler Shaffer &amp; Tanner Gaspard</b><br>
     Elijah Miller <i>backpack</i><br>
     Riley Hartline <i>backpack</i><br>
     Jacob Reinbolt<br>
@@ -56,12 +62,6 @@
     Griffin Cox <mark>ADHD, not medicated per physician</mark><br>
   </p>
 
-  <p><b>Chad Helland / Dave Gannon</b><br>
-    Bailey Wilson<br>
-    Seth Perkins<br>
-    Andrew Fritts<br>
-  </p>
-  
 </body>
 
 </html>
