--- a/mvmt19/rosters/8-girls.html
+++ b/mvmt19/rosters/8-girls.html
@@ -26,7 +26,23 @@
 
   <h1>8th Grade Girls</h1>
 
-  <p><b>Jordan Lindsay / Brittany Pollard</b><br>
+  <p><b>Christy Sanders</b><br>
+    Sydney Freels<br>
+    Makaylah Cain<br>
+    Jemma Reed<br>
+    Lyndsey Dodge<br>
+  </p>
+
+  <p><b>Jessie Owens</b><br>
+    Isabella Reeves	<mark>Nightly meds for adhd</mark><br>
+    Emma Cooke<br>
+    Marnasia England<br>
+    Te'shauria Akinleye<br>
+    Riley Estes	<i>backpack</i><br>
+    Cara Akin<br>
+  </p>
+
+  <p><b>Jordan Lindsay &amp; Brittany Pollard</b><br>
     Leanna Johnson<br>
     Tessa Krokowski<br>
     Addie Rittenhouse<br>
@@ -43,7 +59,7 @@
     Sophia Dyke<br>    
   </p>
 
-  <p><b>Taylor Pritchett / Maggie Carringer</b><br>
+  <p><b>Taylor Pritchett &amp; Maggie Carringer</b><br>
     Liana Lopez<br>
     Olivia Rhea<br>
     Katelynn Hayes<br>    
@@ -53,22 +69,6 @@
     Kylee Thompson	<i>backpack</i><br>
     Vivian Newton	<i>backpack</i><br>
     Kate Wilson<br>    
-  </p>
-
-  <p><b>Jessie Owens</b><br>
-    Isabella Reeves	<mark>Nightly meds for adhd</mark><br>
-    Emma Cooke<br>
-    Marnasia England<br>
-    Te'shauria Akinleye<br>
-    Riley Estes	<i>backpack</i><br>
-    Cara Akin<br>
-  </p>
-
-  <p><b>Christy Sanders</b><br>
-    Sydney Freels<br>
-    Makaylah Cain<br>
-    Jemma Reed<br>
-    Lyndsey Dodge<br>
   </p>
 
   <p><b>Needs Leader</b><br>
