--- a/mvmt19/rosters/9-boys.html
+++ b/mvmt19/rosters/9-boys.html
@@ -26,7 +26,7 @@
 
   <h1>9th Grade Boys</h1>
 
-  <p><b>Callen Harrell / Clay England</b><br>
+  <p><b>Callen Harrell &amp; Clay England</b><br>
     Riley Keegan<br>
     Conner Frost<br>
     Josiah Swafford<br>
