update series name

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Values - Week 1</title>
+  <title>DNA - Week 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,7 +33,7 @@
 
   <div align="middle"><img src="./img/fps-logo.png" alt="FPS Logo" style="max-width:80%;height:auto;"></div>
 
-  <h1><i>Values</i> Week 1</h1>
+  <h1><i>DNA</i> Week 1</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
