update for DNA week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 1</title>
+  <title>DNA - Week 2</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -31,32 +31,33 @@
 
 <body>
 
-  <div align="middle"><img src="./img/guide-logo.png" alt="Series Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
 
-  <h1><i>DNA</i> Week 1</h1>
+  <h1><i>DNA</i> Week 2</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Are you guys excited for Movement?</li>
-      <li>What vacations has everybody been on this summer?</li>
+      <li>How was Movement last week? What did you get out of it?</li>
+      <li>What are your plans for the rest of the summer?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>What big life choices are you struggling with right now? (College, friends, relationships)</li>
+      <li>In life, what do you find the hardest thing to give up is? (time, effort, money, love)</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Putting God first makes filling in the blank easy.</li>
+      <li>What you give is what you’ll get.</li>
     </ul>
 
   <h2>Scripture</h2>
 
-    <p><b>Matthew 10:37-39 (NLT)</b> If you love your father or mother more than you love me, you are not worthy of being mine; or if you love your son or daughter more than me, you are not worthy of being mine. <sup>38</sup> If you refuse to take up your cross and follow me, you are not worthy of being mine. <sup>39</sup> If you cling to your life, you will lose it; but if you give up your life for me, you will find it.</p>
+    <p><b>Luke 6:38 (NIV)</b> Give, and it will be given to you. A good measure, pressed down, shaken together and running over, will be poured into your lap. For with the measure you use, it will be measured to you.</p>
+    
     <ul>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
@@ -64,8 +65,8 @@
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Personally, what things in your life are first place or above God?</li>
-    <li>Whatever is distracting you from God, what would happen if you let it all go this week?</li>
+    <li>What gifts do you have that seem insignificant to you?</li>
+    <li>Do you ever give something to someone hoping for something in return? Why?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -73,15 +74,16 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What personal things do you want to take away from Movement?</li>
-      <li>Challenge the students to go into movement with a blank in “Where the Spirit leads…” and tell them to let God fill the blank over the next few days.</li>
+      <li>How could you use the God given gifts you’ve been given this week to help someone?</li>
+      <li>If someone treats you wrongly this week, what steps are you going to take to combat that?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>After prayer, be sure to remind them of Movement and THE WEEKEND!</li>
+    <li>Pray that your students use their God given gifts how they were intended and pray that they treat everyone with grace like Jesus treats us with grace.</li>
+    <li>After prayer, remind your students of THE WEEKEND!</li>
   </ul>
 
   </body>
