--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 2</title>
+  <title>DNA - Week 3</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -32,31 +32,33 @@
 <body>
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
-
-  <h1><i>DNA</i> Week 2</h1>
+  
+  <h1><i>DNA</i> Week 3</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>How was Movement last week? What did you get out of it?</li>
-      <li>What are your plans for the rest of the summer?</li>
+      <li>Are you ready for school to start back up again?</li>
+      <li>What classes are you wanting to take in the upcoming school year?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>In life, what do you find the hardest thing to give up is? (time, effort, money, love)</li>
+      <li>Share a time when you achieved something great with a group of people or a team.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>What you give is what you’ll get.</li>
+      <li>We get better when we get together.</li>
     </ul>
 
   <h2>Scripture</h2>
 
-    <p><b>Luke 6:38 (NIV)</b> Give, and it will be given to you. A good measure, pressed down, shaken together and running over, will be poured into your lap. For with the measure you use, it will be measured to you.</p>
+    <p><b>Proverbs 27:17 (NLT)</b> As iron sharpens iron, so a friend sharpens a friend.</p>
+
+    <p><b>Ecclesiastes 4:12 (NLT)</b> A person standing alone can be attacked and defeated, but two can stand back-to-back and conquer. Three are even better, for a triple-braided cord is not easily broken.</p>
     
     <ul>
       <li>What is Jesus saying in this scripture?</li>
@@ -65,8 +67,8 @@
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What gifts do you have that seem insignificant to you?</li>
-    <li>Do you ever give something to someone hoping for something in return? Why?</li>
+    <li>How often do you find yourself facing problems alone? Explain some examples.</li>
+    <li>Although being in a group can help you face problems, you have to be in the right group for your needs. What kind of groups of friends do you have? Are they supporting you or enforcing the problems you have?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,15 +76,14 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>How could you use the God given gifts you’ve been given this week to help someone?</li>
-      <li>If someone treats you wrongly this week, what steps are you going to take to combat that?</li>
+      <li>What do you think would happen if you let go of the bad influences in your life and linked arms with better influences?</li>
+      <li>Learning today that you can’t face your problems alone but instead have to do it with a group of people, do you think missing small group or only coming when it’s convenient is the right thing to do? Why or why not?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Pray that your students use their God given gifts how they were intended and pray that they treat everyone with grace like Jesus treats us with grace.</li>
     <li>After prayer, remind your students of THE WEEKEND!</li>
   </ul>
 
