update for DNA week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 3</title>
+  <title>DNA - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,32 +33,30 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>DNA</i> Week 3</h1>
+  <h1><i>DNA</i> Week 4</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Are you ready for school to start back up again?</li>
-      <li>What classes are you wanting to take in the upcoming school year?</li>
+      <li>Do you like the teachers you have? What classes did you end up getting?</li>
+      <li>Focusing on last week’s message, have you joined any new friend groups?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Share a time when you achieved something great with a group of people or a team.</li>
+      <li>Have you ever achieved something amazing but still felt empty after you won? Explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>We get better when we get together.</li>
+      <li>Serving others sets your life apart.</li>
     </ul>
 
   <h2>Scripture</h2>
 
-    <p><b>Proverbs 27:17 (NLT)</b> As iron sharpens iron, so a friend sharpens a friend.</p>
-
-    <p><b>Ecclesiastes 4:12 (NLT)</b> A person standing alone can be attacked and defeated, but two can stand back-to-back and conquer. Three are even better, for a triple-braided cord is not easily broken.</p>
+    <p><b>Matthew 23:11 (NIV)</b> The greatest among you will be your servant.</p>
     
     <ul>
       <li>What is Jesus saying in this scripture?</li>
@@ -67,8 +65,8 @@
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>How often do you find yourself facing problems alone? Explain some examples.</li>
-    <li>Although being in a group can help you face problems, you have to be in the right group for your needs. What kind of groups of friends do you have? Are they supporting you or enforcing the problems you have?</li>
+    <li>Do you ever find yourself being too selfish, that you don’t seem interested in what other people's problems are? Explain.</li>
+    <li>Do you ever find yourself building your own platform instead of the platform of the kingdom of God? How so?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -76,8 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What do you think would happen if you let go of the bad influences in your life and linked arms with better influences?</li>
-      <li>Learning today that you can’t face your problems alone but instead have to do it with a group of people, do you think missing small group or only coming when it’s convenient is the right thing to do? Why or why not?</li>
+      <li>What outcomes do you think would happen if you took interest in OTHER people instead of yourself?</li>
+      <li>Other than what we talked about tonight, how do you think you can achieve greatness?</li>
     </ul>
 
   <h2>Take It Out</h2>
