--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -83,7 +83,12 @@
   <ul>
     <li>Close small group out with prayer requests.</li>
     <li>After prayer, remind your students of THE WEEKEND!</li>
+    <li>As a group, who are a few people you could invite to come to fpStudents? Our goal is for each group to invite at least one person to students this week.</li>
   </ul>
+
+  <h2><font color="red">Special Announcement for High School Students ONLY</font></h2>
+
+  <p>Next week, we have our first Late Night of the school year. Late Night is a time of extended worship for high school students only. Come be refreshed and spend extra time with God in the Chapel at 9:00 pm on August 14th after group.</p>
 
   </body>
 
