update for DNA week 5 and Best Night week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 4</title>
+  <title>DNA - Week 5</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,41 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>DNA</i> Week 4</h1>
+  <h1><i>DNA</i> Week 5</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Do you like the teachers you have? What classes did you end up getting?</li>
-      <li>Focusing on last week’s message, have you joined any new friend groups?</li>
+      <li>Share a time when someone treated you positively or negatively and how it impacted you.</li>
+      <li>Share a time when someone lifted you up, how did it make you feel?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Have you ever achieved something amazing but still felt empty after you won? Explain.</li>
+      <li>Share a time when someone treated you poorly and it made you feel bad.</li>
+      <li>If you were to imitate Jesus, what would that look like?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Serving others sets your life apart.</li>
+      <li>Elevating others is imitating Jesus.</li>
     </ul>
 
   <h2>Scripture</h2>
-
-    <p><b>Matthew 23:11 (NIV)</b> The greatest among you will be your servant.</p>
-    
+ 
     <ul>
-      <li>What is Jesus saying in this scripture?</li>
+      <li><b>1 Cor 10:33-11:1</b> I, too, try to please everyone in everything I do. I don’t just do what is best for me; I do what is best for others so that many may be saved. And you should imitate me, just as I imitate Christ.</li>
+      <li>Teaching points: <b>Love</b> others John 3:16, John 15:9-13 <b>Listen</b> to others Mark 10:46-52, James 1:19 <b>Look</b> for potential in others.</li>
+      <li>What is Paul saying about imitating Christ?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Do you ever find yourself being too selfish, that you don’t seem interested in what other people's problems are? Explain.</li>
-    <li>Do you ever find yourself building your own platform instead of the platform of the kingdom of God? How so?</li>
+    <li>What would happen if we imitated Jesus this week by actively listening to the hearts of People around us?</li>
+    <li>Elevating others is imitating Jesus. If we want to elevate those around us, we need to love, listen and look for people’s potential like Jesus did. Which step is God calling you to take?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,21 +75,22 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What outcomes do you think would happen if you took interest in OTHER people instead of yourself?</li>
-      <li>Other than what we talked about tonight, how do you think you can achieve greatness?</li>
+      <li>If you are not elevating anyone now, who can you work to elevate?</li>
+      <li>What are ways you can elevate others and in so doing imitate Christ?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>After prayer, remind your students of THE WEEKEND!</li>
+    <li>After prayer, remind your students of THE WEEKEND and any upcoming group events!</li>
     <li>As a group, who are a few people you could invite to come to fpStudents? Our goal is for each group to invite at least one person to students this week.</li>
   </ul>
 
   <h2><font color="red">Special Announcement for High School Students ONLY</font></h2>
 
-  <p>Next week, we have our first Late Night of the school year. Late Night is a time of extended worship for high school students only. Come be refreshed and spend extra time with God in the Chapel at 9:00 pm on August 14th after group.</p>
+  <p>Late Night is TONIGHT! Late Night is a time of extended worship for high school students only. Come be refreshed and spend extra time with God in the Chapel at 9:00 pm after group.</p>
+
 
   </body>
 
