--- a/GroupGuide6thGrade.html
+++ b/GroupGuide6thGrade.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Best Night - Week 2</title>
+  <title>Best Night - Week 3</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,85 +33,79 @@
 
   <div align="middle"><img src="./img/best-night.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 2 - Why We Preach</h1>
+  <h1>Week 3 - Why We Group</h1>
   
-  <p><b>What we want students to learn:</b> God’s word is powerful and shapes our lives and the lives of those around us</p>
+  <p><b>What we want students to learn:</b> God’s best for you is in a small group! You were not made to do life alone!</p>
 
-  <p><b>What we want students to do with what they've learned:</b> Understand and apply God’s word to your life to reach people for Christ</p>
+  <p><b>What we want students to do with what they've learned:</b> Students should use their life groups as a place where they can encourage others, be encouraged, and grow together. These relationships should extend beyond one night a week.</p>
 
-  <p><b>Scripture Focus:</b> Hebrews 4:12 and Jeremiah 23:29</p>
+  <p><b>Scripture Focus:</b> Acts 2:42-44, 46-47</p>
+
+  <p><b>Supporting Scripture:</b> Ecclesiastes 4:9-12</p>
 
   <p><b>Small Group Tip:</b> Don’t forget that you have access to the “throw and tell conversation starter ball” if you get done early or want to take a break during the lesson.</p>
 
   <h2>The Main Point</h2>
 
-  <p>We need to understand that God’s word is a firm foundation for our lives. If we allow Him, God will help us determine what His word is asking us to do and how to do it. God’s Word can impact our lives and others when we read it, hear it, and share it.</p>
+  <p>Life is hard, and when you try to do it alone, it is even harder.  From the beginning, God realized that man was not meant to be alone. Throughout the bible, the term “one another” is used more than 50 times.  God designed us to have relationships.  We were meant to do life together, encourage each other, pray for each other, and love each other. At fpStudents, that starts with our small groups.</p>
 
-  <h2>Introduction</h2>
+  <h2>Ice Breaker</h2>
 
-  <p>FIRST, open up your group by talking about the past week, and what has happened in student’s lives.</p>
+  <p>This week we are going to keep the ice breaker simple.  Just give each of the students a chance to talk about their week.  Either the best thing that happened, or the worst thing that happened.  Try to keep it short, and give everyone a chance to speak.  After each person finishes, ask the rest of the group how many of them knew about that event.</p>
 
-  <p>THEN, ask the Ice Breaker Question:</p>
-
-  <ul>
-      <li>If someone gave you the board game MONOPOLY with no instructions, and asked you to play it, how do you think it would go?</li>
-  </ul>
-
-  <p>The bible is like an instruction manual to our lives. Have you ever wondered why our lives and the lives of those around us seem to be like chaos sometimes? It is the end result of not having an obedient relationship with Jesus Christ. Just like Monopoly with no instructions, our lives without God’s word will be in disorderly. We must first apply scripture to our lives before we try to preach it to others.</p>
-  
-  <p>PRAY before starting your group session, asking God to reveal the truth and power of His word.</p>
+  <p>All too often, our life groups begin and end on Wednesday night, and don’t continue throughout the week.  Tonight we are going to talk about groups, and how God intended us to encourage and support each other throughout our entire lives.</p>
 
   <hr>
 
   <h2>Lesson</h2>
   
-  <p>Ask the students to talk about what comes to mind when they hear about the Bible. Then, disucuss the following question.</p>
-  
-  <p class="question">How does God’s Word help us grow?</p>
-  
-  <p class="answer">It reveals truth; it provides knowledge; it refreshes our spirits; it gives us hope.</p>
+  <p class="question">So far, what is your favorite part about being in a FPS small group?</p>
 
-  <p>Have a student read Hebrews 4:12. (Check out the New Living Translation (NLT) or God’s Word Translation (GW) for an easy to understand translation)</p>
-  
-  <p class="question">What does this verse compare the Bible to?</p>
-  
-  <p class="question">Why does scripture compare God’s word to a sword?</p>
-  
-  <p class="answer">A sword cuts through material that is softer than it. (God’s word CUTS through the hardness of hearts because it is stronger!)</p>
+  <p>Have a student read Acts 2:42-44. Then ask the following questions:</p>
 
-  <p class="question">How does the Bible “expose” our thoughts and desires? (NLT translation)</p>
+  <p class="question">What does fellowship mean to you?</p>
 
-  <p class="answer">When we read scripture, many times it will directly correlate with what is going on in our hearts, and in our lives.  Also, when we see that our lives differ from what is noted in scripture, we are convicted by the Holy Spirit.</p>
+  <p class="answer">Help the students explore what the bible meant by fellowship – not just hanging out with friends.</p>
+
+  <p class="question">According to these verses, what did these people do together?</p>
+
+  <p class="answer">They listened to teaching together, grew together, prayed together, ate together, and worshipped God together.</p>
+
+  <p class="question">What are some things that good friends do for each other?</p>
+
+  <p class="answer">Good friends don’t just post pictures with each other. Good friends encourage one another and point each other back to Jesus. That is exactly what this group of believers did. They pointed each other to Jesus consistently.</p>
+
+  <p>Now have a student read Ecclesiastes 4:9-12.  Explain to your students that we were meant to do life together, support each other and encourage each other.  Then ask the following questions:</p>
+
+  <p class="question">Who is somebody you can rely on to help you when you fall?</p>
+
+  <p class="question">Who in your life is encouraging you and praying for you?</p>
+
+  <p class="question">Who are you encouraging and praying for?</p>
 
   <hr>
 
   <h2>Life Application</h2>
   
-  <p>Now that we have discussed in depth what scripture says about God’s word, let us place our confidence in His ability to change our lives and the people around us, too!  Stay in God’s word to keep your sword sharpened! Just like a warrior in battle, you don’t want to face your enemy with a dull sword!</p>
+  <p>Now let’s go back to the verses in Acts 2 one more time.  Have a student read Acts 2:46-47, and then ask the following life application questions:</p>
   
-  <p>Reading and Hearing God’s Word - Let’s be honest. Sometimes it can be hard to stay focused during the message. For students, they have theirs phones in their laps, their friends next to them, and a random thought about homework they forgot popping up in their minds. However, these distractions don’t have to win.</p>
+  <p class="question">Do you think that just meeting and talking on Wednesday nights is enough? Why or why not?</p>
 
-  <p class="question">What is one step you can take tonight to focus on the message instead of the things happening around you?</p>
+  <p class="question">We want our small groups to be a place where students feel safe and encouraged to talk about what is happening in their life. What is one step you all, as a group, can take to make this a safe and encouraging place?</p>
 
-  <p class="answer">Sit by friends who won’t distract you, turn your phone on airplane mode, take notes, etc.</p>
+  <p class="question">How can we, as a small group, continue to support each other throughout the week?</p>
 
-  <p class="question">We don’t have to stop reading and hearing about the Bible when we go home. What is one step you can take this week to read God’s Word?</p>
-  
-  <p class="answer">Sign up for a plan on the Bible app (YouVersion has a lot of great plans that are short and simple). Start a verse of the day group message with your small group, read one chapter from the book of John, etc.</p>
-  
-  <p class="answer">Challenge: This week, read the passage that your student pastor uses during his sermon tonight. You can read small portions of it or even consider memorizing a verse from it.</p>
-  
-  <p>Sharing God’s Word – God’s Word doesn’t stop with us. It is meant to be shared with those around you after you experience it yourself.</p>
-  
-  <p class="question">How can you use the Bible to encourage your friends?</p>
-
-  <p class="question">Is there anyone specifically to whom God is calling you to share His word?</p>
+  <p class="answer">Our students live in a technologically driven world.  Brainstorm ways that your group can leverage that technology to make small group last throughout the week, not just on Wednesday night.</p>
 
   <hr>
 
+  <h2>Closing Activity</h2>
+
+  <p>Does your small group still have your conversation starter ball? If time allows spend the rest of group time tossing it around, having students answer questions. Great friendships aren’t just built on serious things. Having fun is one of the best parts about friendships too!</p>
+
   <h2>Take It Out</h2>
   
-  <p>Close small group out with prayer requests. Encourage students to share things that are really impacting them personally. Pray specifically for the group, and the effect they are going to have on the world around them.</p>
+  <p>Close small group out with prayer requests. Encourage students to share things that are really impacting them personally. Remind them that prayer requests don’t have to only happen on Wednesday nights, and that they can be praying for each other daily.</p>
   
   <p>After prayer, be sure to remind them of any upcoming group serving activities or student events and THE WEEKEND!</p>
 
