update for DNA week 6

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 5</title>
+  <title>DNA - Week 6</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,41 +33,39 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>DNA</i> Week 5</h1>
+  <h1><i>DNA</i> Week 6</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Share a time when someone treated you positively or negatively and how it impacted you.</li>
-      <li>Share a time when someone lifted you up, how did it make you feel?</li>
+      <li>What was the most exciting thing that happened in your life this week?</li>
+      <li>If you had to choose one word to represent the theme of your life this week, what word would you choose and why?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Share a time when someone treated you poorly and it made you feel bad.</li>
-      <li>If you were to imitate Jesus, what would that look like?</li>
+      <li>Has there ever been a time in your life when you felt like you were bursting with news? Was it your news to share? Did you share it? Why, or why not? Give an example.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Elevating others is imitating Jesus.</li>
+      <li>God tells His story through His people.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li><b>1 Cor 10:33-11:1</b> I, too, try to please everyone in everything I do. I don’t just do what is best for me; I do what is best for others so that many may be saved. And you should imitate me, just as I imitate Christ.</li>
-      <li>Teaching points: <b>Love</b> others John 3:16, John 15:9-13 <b>Listen</b> to others Mark 10:46-52, James 1:19 <b>Look</b> for potential in others.</li>
-      <li>What is Paul saying about imitating Christ?</li>
+      <li><b>2 Corinthians 5:20</b> We are therefore Christ's ambassadors, as though God were making His appeal through us. We implore you on Christ's behalf: be reconciled to God.</li>
+      <li>What do you think it means to be an ambassador for Christ?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What would happen if we imitated Jesus this week by actively listening to the hearts of People around us?</li>
-    <li>Elevating others is imitating Jesus. If we want to elevate those around us, we need to love, listen and look for people’s potential like Jesus did. Which step is God calling you to take?</li>
+    <li>If you are working to become a representative of Christ, what should that look like in your life? If you were the only example your friends had of God, who would they think He is?</li>
+    <li>What steps can you take to tell your loved ones about Jesus?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -75,22 +73,17 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>If you are not elevating anyone now, who can you work to elevate?</li>
-      <li>What are ways you can elevate others and in so doing imitate Christ?</li>
+      <li>Who do you know who most needs to be introduced to the love and hope of Jesus? What can you do right now to let them know that they are loved and created with purpose?</li>
+      <li>How can you grow closer to God personally, in order to be a better example of Him to those around you?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>After prayer, remind your students of THE WEEKEND and any upcoming group events!</li>
-    <li>As a group, who are a few people you could invite to come to fpStudents? Our goal is for each group to invite at least one person to students this week.</li>
+    <li>Pray specifically for the upcoming week that your students will work actively to nurture their relationship with Jesus, and that they will have the strength and boldness to step out and share His story with those around them.</li>
+    <li>After prayer, remind them to keep burying themselves in the Word, because it is only through strengthening their own relationships with God that they can share His love with others.</li>
   </ul>
-
-  <h2><font color="red">Special Announcement for High School Students ONLY</font></h2>
-
-  <p>Late Night is TONIGHT! Late Night is a time of extended worship for high school students only. Come be refreshed and spend extra time with God in the Chapel at 9:00 pm after group.</p>
-
 
   </body>
 
